add alt description

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="subheader__btns">
                         <button class="btn subheader__btn" data-modal="consultation">
-                            <img src="icons/btn/file.svg" alt="">
+                            <img src="icons/btn/file.svg" alt="file">
                             Download CV
                         </button>
                         <button class="button subheader__button" data-modal="consultation">More</button>
@@ -178,21 +178,21 @@
                     Latest Project
                 </h2>
             <div class="projects__item">
-                <img class="projects__img" src="img/daur.png" alt="">
+                <img class="projects__img" src="img/daur.png" alt="daur project">
                 <div class="projects__item-name title_fz32">
                     <span>Daur</span>Uang Mobile Apps
                 </div>
                 <button class="projects__btn btn">View Details</button>
             </div>
             <div class="projects__item">
-                <img class="projects__img" src="img/rectangle.png" alt="">
+                <img class="projects__img" src="img/rectangle.png" alt="empty">
                 <div class="projects__item-name title_fz32">
                     Ada Mekanik Mobile Apps
                 </div>
                 <button class=" projects__btn btn">View Details</button>
             </div>
             <div class="projects__item">
-                <img class="projects__img" src="img/rectangle.png" alt="">
+                <img class="projects__img" src="img/rectangle.png" alt="empty">
                 <div class="projects__item-name title_fz32">
                     InDorse Mobile Apps
                 </div>
@@ -207,7 +207,7 @@
                 <div>
                     <button class="projects__item-btn button">More Projects</button>
                     <button class="btn projects__btn">
-                        <img src="icons/btn/email.svg" alt="">
+                        <img src="icons/btn/email.svg" alt="email">
                         Email Me
                     </button>
                 </div>
@@ -222,28 +222,28 @@
             <div class="resume__wrapper">
                 <div class="resume__item">
                     <div class="resume__item-img">
-                        <img src="icons/softs/workholic.png" alt="">
+                        <img src="icons/softs/workholic.png" alt="workholicc">
                     </div>
                     <div class="resume__item-subtitle">Workaholic</div>
                     <div class="resume__item-text">I’m a kind of person who can’t just stand around and doing nothing. I have a tendency to do something productive.</div>
                 </div>
                 <div class="resume__item">
                     <div class="resume__item-img">
-                        <img src="icons/softs/communicative.png" alt="">
+                        <img src="icons/softs/communicative.png" alt="communicative">
                     </div>
                     <div class="resume__item-subtitle">Communicative</div>
                     <div class="resume__item-text">I have a broad understanding of verbal vocabulary. Therefore, I can convey a message well to the receiver.</div>
                 </div>
                 <div class="resume__item">
                     <div class="resume__item-img">
-                        <img src="icons/softs/cooperative.png" alt="">
+                        <img src="icons/softs/cooperative.png" alt="cooperative">
                     </div>
                     <div class="resume__item-subtitle">Cooperative</div>
                     <div class="resume__item-text">Behind the successful project, there’s a great team. I can build a good cooperation and remain consistent with the goal.</div>
                 </div>
                 <div class="resume__item">
                     <div class="resume__item-img">
-                        <img src="icons/softs/perfectionist.png" alt="">
+                        <img src="icons/softs/perfectionist.png" alt="perfectionist">
                     </div>
                     <div class="resume__item-subtitle">Perfectionist</div>
                     <div class="resume__item-text">I have a strong intuition. I have remained consistent with high quality standards to present a most worthy result.</div>
@@ -324,19 +324,19 @@
             <h3 class="skills__subtitle title_fz36">Tools and Skills</h3>
             <div class="skills__items">
                 <div class="skills__img">
-                    <img src="img/skills/photoshop.png" alt="">
+                    <img src="img/skills/photoshop.png" alt="photoshop">
                 </div>
                 <div class="skills__img">
-                    <img src="img/skills/figma.png" alt="">
+                    <img src="img/skills/figma.png" alt="figma">
                 </div>
                <div class="skills__img">
-                    <img src="img/skills/html5.png" alt="">
+                    <img src="img/skills/html5.png" alt="html5">
                </div>
                 <div class="skills__img">
-                    <img src="img/skills/css3.png" alt="">
+                    <img src="img/skills/css3.png" alt="css3">
                 </div>
                 <div class="skills__img">
-                    <img src="img/skills/xml.png" alt="">
+                    <img src="img/skills/xml.png" alt="xml">
                 </div>
             </div>
         </div>
@@ -348,28 +348,28 @@
             <div class="footer__wrapper">
                 <div class="footer__items">
                     <div class="footer__item">
-                        <img class="footer__img" src="icons/footer/call.svg " alt="">
+                        <img class="footer__img" src="icons/footer/call.svg " alt="call">
                         <div class="footer__content">
                             <div class="footer__caption">Phone</div>
                             <a href="tel:08993415875" class="footer__contact">0899-3415-875</a>
                         </div>
                     </div>
                     <div class="footer__item">
-                        <img class="footer__img" src="icons/footer/email.svg" alt="">
+                        <img class="footer__img" src="icons/footer/email.svg" alt="email">
                         <div class="footer__content">
                             <div class="footer__caption">Email</div>
                             <a class="footer__contact" href="mailto:dimasarsmith@gmail.com">dimasarsmith@gmail.com</a>
                         </div>
                     </div>
                     <div class="footer__item">
-                        <img class="footer__img" src="icons/footer/location.svg" alt="">
+                        <img class="footer__img" src="icons/footer/location.svg" alt="location">
                         <div class="footer__content">
                             <div class="footer__caption">Address</div>
                             <a class="footer__contact" href="#">Griya Japan Raya Tahap 4 B2/01, Sooko, Mojokerto</a>
                         </div>
                     </div>
                 </div>
-                <img class="footer__bg" src="img/footer_img.png" alt="">
+                <img class="footer__bg" src="img/footer_img.png" alt="footer img">
             </div>
             
         </div>
