adapted pictures in the block 'project'

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     </a>
                     <div class="menu">
                         <nav class="menu__list">
-                            <ul>
+                            <ul class="menu__list">
                                 <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
                                 <li class="menu__item"><a class="menu__link" href="#">About</a></li>
                                 <li class="menu__item"><a class="menu__link" href="#">Project</a></li>
@@ -178,21 +178,27 @@
                     Latest Project
                 </h2>
             <div class="projects__item">
-                <img class="projects__img" src="img/daur.png" alt="daur project">
+                <div class="projects__item-img">
+                    <img src="img/daur.png" alt="daur project">
+                </div>
                 <div class="projects__item-name title_fz32">
                     <span>Daur</span>Uang Mobile Apps
                 </div>
                 <button class="projects__btn btn">View Details</button>
             </div>
             <div class="projects__item">
-                <img class="projects__img" src="img/rectangle.png" alt="empty">
+                <div class="projects__item-img">
+                    <img src="img/project2.png" alt="empty">
+                </div>
                 <div class="projects__item-name title_fz32">
                     Ada Mekanik Mobile Apps
                 </div>
                 <button class=" projects__btn btn">View Details</button>
             </div>
             <div class="projects__item">
-                <img class="projects__img" src="img/rectangle.png" alt="empty">
+                <div class="projects__item-img">
+                    <img src="img/cosmos.png" alt="empty">
+                </div>
                 <div class="projects__item-name title_fz32">
                     InDorse Mobile Apps
                 </div>
